# fastapi-testing-server

./: .envrc  .gitignore  Dockerfile.local  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
